--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body{
 
 .container {
   height: 100vh;
-  width: 95%;
+  width: 53rem;
   margin: 0 auto;
 }
 
@@ -17,13 +17,13 @@ body{
 }
 
 .header-left {
-  width: 58%;
+  width: 52%;
   margin-right: auto;
   height: 100%;
 }
 
 .header-right {
-  width: 40%;
+  width: 45%;
   display: flex;
   justify-content: end;
   align-items: end;
@@ -131,23 +131,23 @@ body{
 }
 
 .product-left {
-  width: 58%;
+  width: 52%;
   margin-right: auto;
 }
 
 .product-right {
-  width: 38%;
+  width: 45%;
 }
 
 .products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 6px;
+  grid-gap: 8px;
 }
 
 .btn-item {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   cursor: pointer;
   background-color: white;
@@ -167,7 +167,7 @@ body{
 }
 
 .pop {
-  width: 7rem;
+  width: 5.5rem;
   text-align: center;
   padding: 3px;
 }
@@ -284,8 +284,8 @@ body{
 .add-cart{
   background-color: #A41BB9;
   width: 2.5rem;
-  position: absolute;
-  right: 100px;
+  position: relative;
+  left: 70px;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -303,8 +303,8 @@ body{
 .close-product {
   background-color: transparent;
   width: 2.5rem;
-  position: absolute;
-  right: 25px;
+  position: relative;
+  left: 340px;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -320,6 +320,12 @@ body{
 .container-item-cart {
   display: flex;
   flex-direction: column;
+}
+
+.subcontainer-cart {
+  display: flex;
+  justify-content: space-between;
+  height: 4.5rem;
 }
 
 .item-cart-left {
@@ -378,18 +384,29 @@ body{
   margin-left: 2px;
 }
 
-.subcontainer-cart {
-  display: flex;
-  justify-content: space-between;
-}
-
 .trash-item {
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  border: none;
+  background-color: transparent;
 }
 
 .trash-item :active {
   transform: scale(0.95); 
+}
+
+* ::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+* ::-webkit-scrollbar-track {
+  background: #d4d3d3;
+
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #A41BB9;
+  border-radius: 20px;
 }
