--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,7 @@ body{
 .products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 8px;
+  grid-gap: 13px;
 }
 
 .btn-item {
@@ -152,7 +152,14 @@ body{
   align-items: center;
   cursor: pointer;
   background-color: white;
+  transition: all 400ms ease;
 }
+.btn-item:hover {
+  background-color: transparent;
+  border-color: #bb1ed3;
+  box-shadow: 7px 5px 14px 2px rgba(106, 84, 109, 0.3);
+}
+
 
 .btn-item:active {
   transform: scale(0.99); 
@@ -424,6 +431,21 @@ body{
   background-color: #A41BB9;
   border-radius: 20px;
 }
+
+.payment {
+  background-color: #1A4594;
+  color: white;
+  height: 2.5rem;
+  width: 10rem;
+  border: none;
+  border-radius: 4px;
+  font-weight: 600;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 
 @media only screen and (max-width: 900px){
 
